2009-12-01  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/42237
	* tree-sra.c (sra_ipa_modify_assign): Split gimple_reg_type assignments
	in between references into two.

	* testsuite/gcc.c-torture/compile/pr42237.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154874 138bc75d-0d04-0410-961f-82ee72b054a4